# ycm-core-rs

./: .ycm_extra_conf.py  Cargo.toml
benches/: filter.rs
src/: .lib.rs.swp  .string_vector.rs.swp  filter.rs  identifier_completer.rs  lib.rs  main.rs  routes.rs  server.rs  string_vector.rs  ycmd_types.rs
src/completer/: filename.rs  mod.rs  trigger.rs  ultisnips.rs
src/completer/lsp/: client.rs  mod.rs  transport.rs
src/core/: candidate.rs  character.rs  mod.rs  query.rs
src/core/utils/: identifier.rs  mod.rs
