[package]
name = "ycm_core_rs"
version = "0.1.0"
authors = ["Anton Romanov <theli.ua@gmail.com>"]
edition = "2018"

[lib]
name = "ycm_core"
#crate-type = ["cdylib"]

[profile.bench]
debug = true

[dependencies]
lazy_static = "1.4.0"
lcs = "0.2.0"
partial_sort = "0.1.2"
smallvec = {version = "1.6.1", features = ["union"] }
unicode-linebreak = "0.1.1"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.7.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filter"
harness = false
