[package]
name = "ycm_core_rs"
version = "0.1.0"
authors = ["Anton Romanov <theli.ua@gmail.com>"]
edition = "2018"

[lib]
name = "ycm_core"
[[bin]]
name = "ycmd"
path = "src/main.rs"


[profile.bench]
debug = true

[dependencies]
base64 = "0.13"
lazy_static = "1.4.0"
lcs = "0.2.0"
log = "0.4"
partial_sort = "0.1.2"
ring = "0.16.20"
env_logger = "0.8"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = {version = "1.6.1", features = ["union"] }
structopt = { version = "0.3" }
tokio = { version = "1.0", features = ["full"]}
unicode-linebreak = "0.1.1"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.7.1"
warp = "0.3.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filter"
harness = false
