[package]
name = "ycm_core_rs"
version = "0.1.0"
authors = ["Anton Romanov <theli.ua@gmail.com>"]
edition = "2018"

[lib]
name = "ycm_core"

[[bin]]
name = "ycmd"
path = "src/main.rs"


[profile.bench]
debug = true

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "1"
dirs = "3.0.2"
filedescriptor = "0.8.0"
itertools = "0.10"
lazy_static = "1.4.0"
lcs = "0.2.0"
log = "0.4"
lsp-types = "0.89.2"
jsonrpc-core = "18.0.0"
partial_sort = "0.1.2"
ring = "0.16.20"
env_logger = "0.8"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.0"
sharded-slab = "0.1.1"
smallvec = {version = "1.6.1", features = ["union"] }
structopt = { version = "0.3" }
tokio = { version = "1", features = ["full"]}
unicode-linebreak = "0.1.1"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.7.1"
warp = "0.3.1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3.2.0"

[[bench]]
name = "filter"
harness = false
